2010-12-06  Pierre Boivin <pierre.boivin@infoglobe.ca>
	* Fixed bug : #11278: Create an interface for the linktype classes
	* Fixed bug : #10589: HTTP errors might not be detected (Thanks to Tolleiv Nietsch)
	* Fixed bug : #11274: Change true to 1 for showUpdateButton
	* Fixed bug : #11272: Fix dos line endings in ext_tables.php
	* Fixed bug : #11270: List in the BE module should be sorted by record
	* Fixed bug : #11275: Remove clear.gif in modfunc1
	* Fixed bug : #10987: linkvalidator doesn't detect hidden page (Thanks to Joh. Feustel)

2010-12-03  Pierre Boivin <pierre.boivin@infoglobe.ca>
	* Fixed bug : #11271: Lowercase all filenames
	* Fixed bug : #11280: Refactor class tx_linkvalidator_processing
	* Fixed bug : #10907: invalid external url not detected

2010-11-22  Tolleiv Nietsch  <info@tolleiv.de>

	* Fixed bug: #10988: getBrokenUrl returns wrong url (Thanks to Johannes Feustel)

2010-11-20  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #10998: Rename and move link classes and processing class

2010-11-17  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #10912: Rename and move task to classes/tasks and change locallang namespace
	* Fixed bug #10900: Regression: Fatal error in class.tx_linkvalidator_modfunc1.php
	* Tagging version 1.0.0
	* Fixed bug #10892: Basic cleanup throughout the extension
	* Fixed bug #10891: Fix deprecation warning "call by reference" in modfunc1
	* Fixed bug #10820: Error and warning in scheduler task
	* Fixed bug #10890: Add ext:info as dependency in ext_emconf

2010-11-12  Tolleiv Nietsch  <info@tolleiv.de>

	* Fixed bug #10763: The mailtemplate setting should have a default setting
	* Fixed bug #10598: "Check links" button must be hideable with TS - renamed noUpdateButton to showUpdateButton, manual updated

2010-11-11  Michael Miousse  <michael.miousse@infoglobe.ca>
